<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imgAndroid"
        android:layout_toStartOf="@+id/btnOk"
        android:layout_marginHorizontal="10dp"/>
    <TextView
        android:id="@+id/txtSubtitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_subtitulo"
        android:textSize="18sp"
        android:layout_below="@+id/txtTitulo"
        android:layout_toEndOf="@+id/imgAndroid"
        android:layout_toStartOf="@+id/btnOk"
        android:layout_marginHorizontal="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnOk"
        android:text="@string/txt_btn_ok"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>